Mirror changes from latest SDK from Microsoft

--- a/16.0/Dockerfile
+++ b/16.0/Dockerfile
@@ -4,88 +4,90 @@ FROM mcr.microsoft.com/dotnet/framework/runtime:4.8-windowsservercore-ltsc2019
 MAINTAINER dealdiane@netpotential.co.nz
 
 # This DockerFile was based from 
-#   https://github.com/Microsoft/dotnet-framework-docker/blob/master/4.7.1-windowsservercore-1709/build/Dockerfile
 #   https://github.com/microsoft/dotnet-framework-docker/blob/master/4.8/sdk/windowsservercore-1909/Dockerfile
 
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; $VerbosePreference = 'Continue'; "]
-
 ENV NUGET_VERSION=5.3.1 `
-    NODE_VERSION=8.10.0 `
-    NODE_DOWNLOAD_SHA=936ada36cb6f09a5565571e15eb8006e45c5a513529c19e21d070acf0e50321b `
-    VS_BUILDTOOLS_URI=https://aka.ms/vs/16/release/vs_buildtools.exe
+    NODE_VERSION=12.17.0 `
+    NODE_DOWNLOAD_SHA=F3A64DC6AD48577F1F81521AA144C028BEB7E353D0FCD05D7B420A72A84F50FC `
+    VS_BUILDTOOLS_URI=https://aka.ms/vs/16/release/vs_buildtools.exe `
+    VS_TESTAGENT_URI=https://download.visualstudio.microsoft.com/download/pr/0fed0c12-ccd3-4767-b151-a616aaf99d86/87427eb26c5d1597bf3a6c87e295827d0a042e0edeb04c2668c474aca9a3d3e6/vs_TestAgent.exe
 
 # Install NuGet CLI    
-RUN New-Item -Type Directory $Env:ProgramFiles\NuGet; `
-    Invoke-WebRequest -UseBasicParsing https://dist.nuget.org/win-x86-commandline/v$Env:NUGET_VERSION/nuget.exe -OutFile $Env:ProgramFiles\NuGet\nuget.exe
+RUN mkdir "%ProgramFiles%\NuGet" `
+    && curl -fSLo "%ProgramFiles%\NuGet\nuget.exe" https://dist.nuget.org/win-x86-commandline/v%NUGET_VERSION%/nuget.exe
 
-# Install VS Test Agent
-#RUN Invoke-WebRequest -UseBasicParsing https://download.visualstudio.microsoft.com/download/pr/11796489/8a386d27295953ee79281fd1f1832e2d/vs_TestAgent.exe -OutFile vs_TestAgent.exe; `
-#    Start-Process vs_TestAgent.exe -ArgumentList '--quiet', '--norestart', '--nocache' -NoNewWindow -Wait; `
-#    Remove-Item -Force vs_TestAgent.exe; `
-    
-# Download log collection utility
-RUN $ErrorActionPreference = 'Stop'; `
-    $ProgressPreference = 'SilentlyContinue'; `
-    $VerbosePreference = 'Continue'; `
-    Invoke-WebRequest -Uri https://aka.ms/vscollect.exe -OutFile C:\collect.exe
-
-# Download and install Visual Studio Build Tools
-RUN Invoke-WebRequest -Uri $env:VS_BUILDTOOLS_URI -OutFile C:\vs_buildtools.exe; `
+# Install VS components
+RUN `
+    # Install VS Test Agent
+    curl -fSLo vs_TestAgent.exe %VS_TESTAGENT_URI% `
+    && start /w vs_TestAgent.exe --quiet --norestart --nocache --wait `
+    && powershell -Command "if ($err = dir $Env:TEMP -Filter dd_setup_*_errors.log | where Length -gt 0 | Get-Content) { throw $err }" `
+    && del vs_TestAgent.exe `
+    `
+    # Install VS Build Tools
+    && curl -fSLo vs_BuildTools.exe %VS_BUILDTOOLS_URI% `
     # Installer won't detect DOTNET_SKIP_FIRST_TIME_EXPERIENCE if ENV is used, must use setx /M
-    SETX /M DOTNET_SKIP_FIRST_TIME_EXPERIENCE 1; `
-    $p = Start-Process -Wait -PassThru -FilePath C:\vs_buildtools.exe -ArgumentList `
-      '--add', 'Microsoft.VisualStudio.Component.Roslyn.Compiler', `
-      '--add', 'Microsoft.VisualStudio.Workload.WebBuildTools', `
-      '--add', 'Microsoft.VisualStudio.Workload.MSBuildTools', `
-      '--add', 'Microsoft.VisualStudio.Workload.NetCoreBuildTools', `
-      '--add', 'Microsoft.VisualStudio.Component.Node.Tools', `
-      '--includeRecommended --quiet --nocache --wait --installPath C:\BuildTools'; `
-    if ($ret = $p.ExitCode) { c:\collect.exe; throw ('Install failed with exit code 0x{0:x}' -f $ret) } `
-    Remove-Item -Force vs_buildtools.exe; `
-    Remove-Item -Force -Recurse \"${Env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\"; `
-    Remove-Item -Force -Recurse ${Env:TEMP}\*; `
-    Remove-Item -Force -Recurse \"${Env:ProgramData}\Package Cache\"; `
-    $env:PATH = 'C:\BuildTools\MSBuild\15.0\Bin\;' + $env:PATH; `
-    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
- 
-# Can't get this to work so disabling...    
+    && setx /M DOTNET_SKIP_FIRST_TIME_EXPERIENCE 1 `
+    && start /w vs_BuildTools.exe ^ `
+        --add Microsoft.VisualStudio.Workload.MSBuildTools ^ `
+        --add Microsoft.VisualStudio.Workload.NetCoreBuildTools ^ `
+        --add Microsoft.Net.Component.4.8.SDK ^ `
+        --add Microsoft.Component.ClickOnce.MSBuild ^ `
+        --add Microsoft.VisualStudio.Component.WebDeploy ^ `
+        --add Microsoft.VisualStudio.Workload.WebBuildTools ^ `
+        --add Microsoft.VisualStudio.Component.Node.Tools ^ `
+        --quiet --norestart --nocache --wait `
+    && powershell -Command "if ($err = dir $Env:TEMP -Filter dd_setup_*_errors.log | where Length -gt 0 | Get-Content) { throw $err }" `
+    && del vs_BuildTools.exe `
+    `
+    # Cleanup
+    && rmdir /S /Q "%ProgramFiles(x86)%\Microsoft Visual Studio\Installer" `
+    && powershell Remove-Item -Force -Recurse "%TEMP%\*" `
+    && rmdir /S /Q "%ProgramData%\Package Cache"
+
+# Install web targets
+RUN curl -fSLo MSBuild.Microsoft.VisualStudio.Web.targets.zip https://dotnetbinaries.blob.core.windows.net/dockerassets/MSBuild.Microsoft.VisualStudio.Web.targets.2020.05.zip `
+    && tar -zxf MSBuild.Microsoft.VisualStudio.Web.targets.zip -C "%ProgramFiles(x86)%\Microsoft Visual Studio\2019\BuildTools\MSBuild\Microsoft\VisualStudio\v16.0" `
+    && del MSBuild.Microsoft.VisualStudio.Web.targets.zip
+
+ENV ROSLYN_COMPILER_LOCATION "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin\Roslyn"
+
 # ngen assemblies queued by VS installers - must be done in cmd shell to avoid access issues
-#SHELL ["cmd", "/S", "/C"]
-#RUN set COMPLUS_NGenProtectedProcess_FeatureEnabled=0 `
-#    && \Windows\Microsoft.NET\Framework64\v4.0.30319\ngen update
-#    # Disabled because we're not installing TestAgent
-#    # Workaround VS installer/ngen issue with VSWebLauncher
-#    # && \Windows\Microsoft.NET\Framework\v4.0.30319\ngen uninstall "C:\Program Files (x86)\Microsoft Visual Studio\2017\TestAgent\Common7\IDE\VSWebLauncher.exe" `
-#    # && \Windows\Microsoft.NET\Framework\v4.0.30319\ngen update
-#SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; $VerbosePreference = 'Continue'; "]
+RUN `
+    # Workaround for issue with 32 bit assemblies from .NET Framework 4.8 SDK being 64 bit ngen'ed
+    \Windows\Microsoft.NET\Framework64\v4.0.30319\ngen uninstall "%ProgramFiles(x86)%\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\SecAnnotate.exe" `
+    && \Windows\Microsoft.NET\Framework64\v4.0.30319\ngen uninstall "%ProgramFiles(x86)%\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\WinMDExp.exe" `
+    `
+    && \Windows\Microsoft.NET\Framework64\v4.0.30319\ngen update `
+    `
+    # Workaround VS installer/ngen issues
+    && \Windows\Microsoft.NET\Framework\v4.0.30319\ngen uninstall "%ProgramFiles(x86)%\Microsoft Visual Studio\2019\TestAgent\Common7\IDE\VSWebLauncher.exe" `
+    `
+    && \Windows\Microsoft.NET\Framework\v4.0.30319\ngen update
+    
+# Set PATH in one layer to keep image size down.
+RUN powershell setx /M PATH $(${Env:PATH} `
+    + \";${Env:ProgramFiles}\NuGet\" `
+    + \";${Env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\TestAgent\Common7\IDE\CommonExtensions\Microsoft\TestWindow\" `
+    + \";${Env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin\" `
+    + \";${Env:ProgramFiles(x86)}\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\" `
+    + \";${Env:ProgramFiles(x86)}\Microsoft SDKs\ClickOnce\SignTool\")
 
 # Install Targeting Packs
-RUN @('4.0', '4.5.2', '4.6.2', '4.7.2') `
+RUN powershell " `
+    $ErrorActionPreference = 'Stop'; `
+    $ProgressPreference = 'SilentlyContinue'; `
+    @('4.0', '4.5.2', '4.6.2', '4.7.2', '4.8') `
     | %{ `
-        Invoke-WebRequest -UseBasicParsing https://dotnetbinaries.blob.core.windows.net/referenceassemblies/v${_}.zip -OutFile referenceassemblies.zip; `
-        Expand-Archive referenceassemblies.zip -Force -DestinationPath \"${Env:ProgramFiles(x86)}\Reference Assemblies\Microsoft\Framework\.NETFramework\"; `
+        Invoke-WebRequest `
+            -UseBasicParsing `
+            -Uri https://dotnetbinaries.blob.core.windows.net/referenceassemblies/v${_}.zip `
+            -OutFile referenceassemblies.zip; `
+        Expand-Archive referenceassemblies.zip -DestinationPath \"${Env:ProgramFiles(x86)}\Reference Assemblies\Microsoft\Framework\.NETFramework\" -Force; `
         Remove-Item -Force referenceassemblies.zip; `
-    }
+    }"
 
-
-# Install VS Build Tools
-#    Invoke-WebRequest -UseBasicParsing https://download.visualstudio.microsoft.com/download/pr/11796503/e64d79b40219aea618ce2fe10ebd5f0d/vs_BuildTools.exe -OutFile vs_BuildTools.exe; `
-#    # Installer won't detect DOTNET_SKIP_FIRST_TIME_EXPERIENCE if ENV is used, must use setx /M
-#    setx /M DOTNET_SKIP_FIRST_TIME_EXPERIENCE 1; `
-#    Start-Process -Wait -PassThru -FilePath vs_BuildTools.exe -ArgumentList `
-#      '--add', 'Microsoft.VisualStudio.Component.Roslyn.Compiler', `
-#      '--add', 'Microsoft.VisualStudio.Workload.WebBuildTools', `
-#      '--add', 'Microsoft.VisualStudio.Workload.MSBuildTools', `
-#      '--add', 'Microsoft.VisualStudio.Workload.NetCoreBuildTools', `
-#      '--includeRecommended --quiet --nocache --wait --installPath C:\BuildTools'; `
-#     '--quiet', '--norestart', '--nocache', '--installPath C:\BuildTools', '--includeRecommended' -NoNewWindow -Wait; `
-#   Remove-Item -Force vs_buildtools.exe; `
-#   Remove-Item -Force -Recurse \"${Env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\"; `
-#   Remove-Item -Force -Recurse ${Env:TEMP}\*; `
-#   Remove-Item -Force -Recurse \"${Env:ProgramData}\Package Cache\"
-#    $env:PATH = 'C:\BuildTools\MSBuild\15.0\Bin\;' + $env:PATH; `
-#    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
-
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 # Install node
 # From: https://github.com/aspnet/aspnet-docker/blob/master/1.1/nanoserver/sdk/Dockerfile
